Add functions to get trending and categories

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         type="search"
                         name=""
                         id=""
-                        placeholder="Buscar..."
+                        placeholder="Search..."
                     />
                     <span>
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -54,7 +54,7 @@
                             type="search"
                             name=""
                             id=""
-                            placeholder="Buscar..."
+                            placeholder="Search..."
                         />
                         <span>
                             <i class="fa-solid fa-magnifying-glass"></i>
@@ -62,134 +62,29 @@
                     </div>
                 </section>
                 <section class="trending">
-                    <h2>Buscar Tendencias</h2>
-                    <div class="trending-container container-movies">
-                        <div class="movie-item">
-                            <img
-                                src="./assets/img/Movie1.png"
-                                alt="Deadpool 2"
-                            />
-                            <p class="movie-item__title">Deadpool 2</p>
-                        </div>
-                        <div class="movie-item">
-                            <img
-                                src="./assets/img/Movie2.png"
-                                alt="Deadpool 2"
-                            />
-                            <p class="movie-item__title">
-                                Avengers: Infinity War
-                            </p>
-                        </div>
-                        <div class="movie-item">
-                            <img
-                                src="./assets/img/Movie1.png"
-                                alt="Deadpool 2"
-                            />
-                            <p class="movie-item__title">Deadpool 2</p>
-                        </div>
-                        <div class="movie-item">
-                            <img
-                                src="./assets/img/Movie2.png"
-                                alt="Deadpool 2"
-                            />
-                            <p class="movie-item__title">
-                                Avengers: Infinity War
-                            </p>
-                        </div>
-                    </div>
+                    <h2>Trending</h2>
+                    <div class="container-movies" id="trendingPreview"></div>
                 </section>
-                <section class="popular">
-                    <h2>Las más vistas</h2>
-                    <div class="popular-container container-movies">
-                        <div class="movie-item">
-                            <img
-                                src="./assets/img/Movie1.png"
-                                alt="Deadpool 2"
-                            />
-                            <p class="movie-item__title">Deadpool 2</p>
-                        </div>
-                        <div class="movie-item">
-                            <img
-                                src="./assets/img/Movie2.png"
-                                alt="Deadpool 2"
-                            />
-                            <p class="movie-item__title">
-                                Avengers: Infinity War
-                            </p>
-                        </div>
-                        <div class="movie-item">
-                            <img
-                                src="./assets/img/Movie1.png"
-                                alt="Deadpool 2"
-                            />
-                            <p class="movie-item__title">Deadpool 2</p>
-                        </div>
-                        <div class="movie-item">
-                            <img
-                                src="./assets/img/Movie2.png"
-                                alt="Deadpool 2"
-                            />
-                            <p class="movie-item__title">
-                                Avengers: Infinity War
-                            </p>
-                        </div>
-                    </div>
+
+                <section class="trending-movies">
+                    <h2>Trending Movies</h2>
+                    <div
+                        class="container-movies"
+                        id="trendingMoviesPreview"
+                    ></div>
                 </section>
+
+                <section class="trending-tv">
+                    <h2>Trending TV shows</h2>
+                    <div
+                        class="container-movies"
+                        id="trendingTVShowsPreview"
+                    ></div>
+                </section>
+
                 <section class="categories">
-                    <h2>Categorías</h2>
-                    <ul class="popular-categories">
-                        <li>
-                            <a href="#">
-                                <i class="fa-solid fa-film"></i>
-                                <span>Acción</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-solid fa-film"></i>
-                                <span>Aventura</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-solid fa-film"></i>
-                                <span
-                                    >Ciencia <br />
-                                    Ficción</span
-                                >
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-solid fa-film"></i>
-                                <span>Comedia</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-solid fa-film"></i>
-                                <span>Drama</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-solid fa-film"></i>
-                                <span>Fantasía</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-solid fa-film"></i>
-                                <span>Romance</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <i class="fa-solid fa-film"></i>
-                                <span>Terror</span>
-                            </a>
-                        </li>
-                    </ul>
+                    <h2>Movies Categories</h2>
+                    <ul class="popular-categories" id="moviesCategories"></ul>
                 </section>
             </section>
 
