Modify API requests to axios

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
             <a href="#"><i class="fa-solid fa-house"></i></a>
             <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
             <a href="#"><i class="fa-solid fa-user"></i></a>
+            <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
             <script src="./assets/src/secret.js"></script>
             <script src="./assets/src/main.js"></script>
         </footer>
