--- a/index.html
+++ b/index.html
@@ -13,19 +13,15 @@
     </head>
     <body>
         <header>
-            <nav class="principal-header">
+            <nav class="principal-header" id="principalHeader">
                 <img
                     class="logo"
                     src="./assets/img/MoviesDB-logo.png"
                     alt="Platzi Movies"
                 />
             </nav>
-            <div class="back-header disable">
-                <span class="back-icon">
-                    <i class="fa-solid fa-circle-chevron-left"></i>
-                </span>
-            </div>
-            <div class="search-header disable">
+            <div class="movie-details-header" id="movieDetailsHeader"></div>
+            <div class="search-header" id="searchHeader">
                 <div class="searcher__bar">
                     <input
                         type="search"
@@ -38,7 +34,7 @@
                     </span>
                 </div>
             </div>
-            <div class="category-header disable">
+            <div class="category-header" id="categoryHeader">
                 <span class="back-icon">
                     <i class="fa-solid fa-circle-chevron-left"></i>
                 </span>
@@ -47,7 +43,7 @@
         </header>
 
         <main>
-            <section class="main-section">
+            <section class="main-section" id="mainSection">
                 <section class="searcher">
                     <div class="searcher__bar">
                         <input
@@ -88,7 +84,7 @@
                 </section>
             </section>
 
-            <section class="generic-section disable">
+            <section class="generic-section" id="genericSection">
                 <div class="generic-section__container">
                     <div class="movie-item generic-item">
                         <img src="./assets/img/Movie1.png" alt="Deadpool 2" />
@@ -125,7 +121,10 @@
                 </div>
             </section>
 
-            <section class="movie-details-section disable">
+            <section class="movie-details-section" id="movieDetailsSection">
+                <span class="close-icon">
+                    <i class="fa-solid fa-circle-xmark"></i>
+                </span>
                 <h1 class="movie-details__title">Deadpool 2</h1>
                 <div class="movie-details__categories">
                     <p>Acción</p>
@@ -185,7 +184,9 @@
             <a href="#"><i class="fa-solid fa-user"></i></a>
             <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
             <script src="./assets/src/secret.js"></script>
+            <script src="./assets/src/nodes.js "></script>
             <script src="./assets/src/main.js"></script>
+            <script src="./assets/src/navigation.js"></script>
         </footer>
     </body>
 </html>
