Fix duplicated items when reload

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             id=""
                             placeholder="Search..."
                         />
-                        <span>
+                        <span id="searcherMainSection">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </span>
                     </div>
@@ -179,9 +179,13 @@
         </main>
 
         <footer class="footer">
-            <a href="#"><i class="fa-solid fa-house"></i></a>
-            <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
-            <a href="#"><i class="fa-solid fa-user"></i></a>
+            <a href="#home" id="homeFooter"
+                ><i class="fa-solid fa-house"></i
+            ></a>
+            <a href="#search" id="searcherFooter"
+                ><i class="fa-solid fa-magnifying-glass"></i
+            ></a>
+            <a href="#" id="profileFooter"><i class="fa-solid fa-user"></i></a>
             <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
             <script src="./assets/src/secret.js"></script>
             <script src="./assets/src/nodes.js "></script>
