Add filter movies by category

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span class="back-icon">
                     <i class="fa-solid fa-circle-chevron-left"></i>
                 </span>
-                <h1 class="category-title">Romance</h1>
+                <h1 class="category-title" id="categoryTitle"></h1>
             </div>
         </header>
 
@@ -84,42 +84,10 @@
                 </section>
             </section>
 
-            <section class="generic-section" id="genericSection">
-                <div class="generic-section__container">
-                    <div class="movie-item generic-item">
-                        <img src="./assets/img/Movie1.png" alt="Deadpool 2" />
-                        <p class="movie-item__title">Deadpool 2</p>
-                    </div>
-                    <div class="movie-item generic-item">
-                        <img src="./assets/img/Movie2.png" alt="Deadpool 2" />
-                        <p class="movie-item__title">Avengers: Infinity War</p>
-                    </div>
-                    <div class="movie-item generic-item">
-                        <img src="./assets/img/Movie1.png" alt="Deadpool 2" />
-                        <p class="movie-item__title">Deadpool 2</p>
-                    </div>
-                    <div class="movie-item generic-item">
-                        <img src="./assets/img/Movie2.png" alt="Deadpool 2" />
-                        <p class="movie-item__title">Avengers: Infinity War</p>
-                    </div>
-                    <div class="movie-item generic-item">
-                        <img src="./assets/img/Movie1.png" alt="Deadpool 2" />
-                        <p class="movie-item__title">Deadpool 2</p>
-                    </div>
-                    <div class="movie-item generic-item">
-                        <img src="./assets/img/Movie2.png" alt="Deadpool 2" />
-                        <p class="movie-item__title">Avengers: Infinity War</p>
-                    </div>
-                    <div class="movie-item generic-item">
-                        <img src="./assets/img/Movie1.png" alt="Deadpool 2" />
-                        <p class="movie-item__title">Deadpool 2</p>
-                    </div>
-                    <div class="movie-item generic-item">
-                        <img src="./assets/img/Movie2.png" alt="Deadpool 2" />
-                        <p class="movie-item__title">Avengers: Infinity War</p>
-                    </div>
-                </div>
-            </section>
+            <section
+                class="generic-section__container"
+                id="genericSection"
+            ></section>
 
             <section class="movie-details-section" id="movieDetailsSection">
                 <span class="close-icon">
