Add searcher functions

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
                 <div class="searcher__bar">
                     <input
                         type="search"
-                        name=""
-                        id=""
+                        name="searcherInput"
+                        id="searcherInput"
                         placeholder="Search..."
                     />
-                    <span>
+                    <span id="searcherButton">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </span>
                 </div>
             </div>
             <div class="category-header" id="categoryHeader">
-                <span class="back-icon">
+                <span class="back-icon" id="backButton">
                     <i class="fa-solid fa-circle-chevron-left"></i>
                 </span>
                 <h1 class="category-title" id="categoryTitle"></h1>
@@ -49,10 +49,10 @@
                         <input
                             type="search"
                             name=""
-                            id=""
+                            id="searcherHomeInput"
                             placeholder="Search..."
                         />
-                        <span id="searcherMainSection">
+                        <span id="searcherHomeButton">
                             <i class="fa-solid fa-magnifying-glass"></i>
                         </span>
                     </div>
@@ -150,7 +150,7 @@
             <a href="#home" id="homeFooter"
                 ><i class="fa-solid fa-house"></i
             ></a>
-            <a href="#search" id="searcherFooter"
+            <a href="#search=" id="searcherFooter"
                 ><i class="fa-solid fa-magnifying-glass"></i
             ></a>
             <a href="#" id="profileFooter"><i class="fa-solid fa-user"></i></a>
