Update trending fuctions

--- a/index.html
+++ b/index.html
@@ -58,12 +58,16 @@
                     </div>
                 </section>
                 <section class="trending">
-                    <h2>Trending</h2>
+                    <h2>
+                        <a href="#trends=all">Trending</a>
+                    </h2>
                     <div class="container-movies" id="trendingPreview"></div>
                 </section>
 
                 <section class="trending-movies">
-                    <h2>Trending Movies</h2>
+                    <h2>
+                        <a href="#trends=movie">Trending Movies</a>
+                    </h2>
                     <div
                         class="container-movies"
                         id="trendingMoviesPreview"
@@ -71,7 +75,9 @@
                 </section>
 
                 <section class="trending-tv">
-                    <h2>Trending TV shows</h2>
+                    <h2>
+                        <a href="#trends=tv">Trending TV Shows</a>
+                    </h2>
                     <div
                         class="container-movies"
                         id="trendingTVShowsPreview"
