Add lazyLoader for images

--- a/index.html
+++ b/index.html
@@ -92,7 +92,14 @@
 
         <section class="categories">
           <h2>Movies Categories</h2>
-          <ul class="popular-categories" id="moviesCategories"></ul>
+          <ul class="popular-categories" id="moviesCategories">
+            <li class="category-item-skeleton"></li>
+            <li class="category-item-skeleton"></li>
+            <li class="category-item-skeleton"></li>
+            <li class="category-item-skeleton"></li>
+            <li class="category-item-skeleton"></li>
+            <li class="category-item-skeleton"></li>
+          </ul>
         </section>
       </section>
 
